SistemaAPI-Gemini.ipynb

--- a/Ptojeto.ipynb
+++ b/Ptojeto.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "gemini = ChatGoogleGenerativeAI(\n",
     "    model=\"gemini-2.0-flash\",\n",
-    "    google_api_key='AIzaSyCnoRPBWtlLyxQGWe_ewVVSyPpVn8-4Roo',\n",
+    "    google_api_key='KEY',\n",
     "    temperature=0.1\n",
     "    )"
    ]
